--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,11 +11,11 @@ builds:
   - CGO_ENABLED=0
 archive:
   replacements:
-    darwin: Darwin
+#    darwin: Darwin
     linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+#    windows: Windows
+#    386: i386
+#    amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
 snapshot:
